# zack-skills

./: .gitignore  Makefile  README.md  SKILL.md  cli.py  package.json  packaging.allowlist  pyproject.toml  setup.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
docs/: README.md  architecture.md  cli.md  install-paths.md  makefile.md  npx.md  plan-markdown-to-itmz-hierarchy-validation.md  plan.md  plugin-system.md  zoom-out.md
plugins/zack/.codex-plugin/: plugin.json
plugins/zack/skills/: RESOLVER.md
plugins/zack/skills/engineering/check/: SKILL.md
plugins/zack/skills/engineering/diagnose/: SKILL.md
plugins/zack/skills/engineering/health/: SKILL.md
plugins/zack/skills/engineering/post-mortem/: SKILL.md
plugins/zack/skills/engineering/pre-mortem/: SKILL.md
plugins/zack/skills/engineering/rice/: SKILL.md
rules/: anti-patterns.md  durable-context.md
scripts/: build_metadata.py  dispatcher-template.md  dispatcher.md  link-skills.sh  skill_frontmatter.py  verify_skills.py
skills/: RESOLVER.md
skills/engineering/improve-architecture/: SKILL.md
skills/engineering/planning/: SKILL.md
skills/engineering/post-mortem/: SKILL.md
skills/engineering/rice/scripts/: check-update.sh
skills/engineering/setup-zack-skills/: SKILL.md  triage-labels.md
skills/engineering/zoom-out/: SKILL.md
skills/productivity/caveman/: SKILL.md
skills/productivity/markdown-to-itmz/: SKILL.md  itmz_converter.py
skills/productivity/markdown-to-itmz/scripts/: check-update.sh
tests/: test_helpers.sh
(+3 files in other folders)
