[project]
name = "zack-skills-cli"
version = "1.9.2"
description = "CLI for managing Zack skills plugin: synchronize marketplace.json, plugin.json, and Claude Code skill symlinks."
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Zack" }]
readme = "README.md"

# Project-local by design: cli.py reads ROOT = its __file__'s parent,
# which only resolves to the skills/ tree when run from the repo root.
# Run via `uv run cli.py ...` from the project directory; do not install as a global tool.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["cli.py"]
